# research_agent

./: .gitignore  README.md  pyproject.toml
configs/: interests.example.yaml
docs/: architecture.md  benchmarking.md  configuration.md  llm-integration.md  production-deployment.md  storage-and-email.md
scripts/: run_daily.sh
src/arxiv_method_agent/: __init__.py  arxiv_client.py  benchmark_registry.py  config.py  dedup.py  docker_runner.py  emailer.py  github_client.py  graph.py  llm.py  logging_config.py  main.py  nodes.py  prompts.py  schemas.py  storage.py  utils.py
